Some Javascript and New Classes.

--- a/about.html
+++ b/about.html
@@ -82,7 +82,8 @@
             </li>
             <li class="nav-list__item">
               <a
-                class="nav-list__link"
+                class="nav-list__link samePageScroll"
+                data-id="contact"
                 href="#contact"
                 style="scroll-behavior: smooth"
                 >Contuct us</a
