--- a/family.html
+++ b/family.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Family Relocation|PAM Consulting</title>
-    <link rel="icon" href="./images/logo-min.png">
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="icon" href="./images/logo-min.png" />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/fonts.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/grid.css" />
     <link rel="stylesheet" href="./styles/app.css" />
-    <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header class="header">
@@ -37,7 +37,9 @@
               <a class="nav-list__link" href="./about.html">About us</a>
             </li>
             <li class="nav-list__item dropdown" data-dropdown>
-              <a class="nav-list__link active-link" data-dropdown-menu href="#">Services</a>
+              <a class="nav-list__link active-link" data-dropdown-menu href="#"
+                >Services</a
+              >
               <svg
                 class="nav-list__dropdown"
                 data-dropdown-menu
@@ -50,26 +52,44 @@
               </svg>
               <ul class="service-menu">
                 <li class="service-menu__item">
-                  <a href="./investment.html" class="service-menu__link nav-list__link"
+                  <a
+                    href="./investment.html"
+                    class="service-menu__link nav-list__link"
                     >Investments opportunities</a
                   >
                 </li>
                 <li class="service-menu__item">
-                  <a href="./business.html" class="service-menu__link nav-list__link">Business relocation</a>
+                  <a
+                    href="./business.html"
+                    class="service-menu__link nav-list__link"
+                    >Business relocation</a
+                  >
                 </li>
                 <li class="service-menu__item">
-                  <a href="#" class="service-menu__link nav-list__link active-link">Family relocation</a>
+                  <a
+                    href="#"
+                    class="service-menu__link nav-list__link active-link"
+                    >Family relocation</a
+                  >
                 </li>
               </ul>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="./investment.html">Invest in cyprus</a>
+              <a class="nav-list__link" href="./investment.html"
+                >Invest in cyprus</a
+              >
             </li>
             <li class="nav-list__item">
               <a class="nav-list__link" href="./migration.html">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#contact" style="scroll-behavior: smooth;">Contuct us</a>
+              <a
+                class="nav-list__link samePageScroll"
+                data-id="contact"
+                href="#contact"
+                style="scroll-behavior: smooth"
+                >Contuct us</a
+              >
             </li>
           </ul>
           <a href="#" class="nav__button btn">Get in touch</a>
