--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-list__link" href="./about.html">About us</a>
             </li>
             <li class="nav-list__item dropdown" data-dropdown>
-              <a class="nav-list__link" data-dropdown-menu href="#servicePart"
+              <a class="nav-list__link samePageScroll" data-id="servicePart" data-dropdown-menu href="#servicePart"
                 >Services</a
               >
               <svg
@@ -89,7 +89,8 @@
             </li>
             <li class="nav-list__item">
               <a
-                class="nav-list__link"
+                class="nav-list__link samePageScroll"
+                data-id="contact"
                 href="#contact"
                 style="scroll-behavior: smooth"
                 >Contuct us</a
