--- a/migration.html
+++ b/migration.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Migration|PAM Consulting</title>
     <link rel="icon" href="./images/logo-min.png" />
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/fonts.css">
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/fonts.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/grid.css" />
     <link rel="stylesheet" href="./styles/app.css" />
-    <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header class="header">
@@ -81,7 +81,12 @@
               <a class="nav-list__link active-link" href="#">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#contact">Contuct us</a>
+              <a
+                class="nav-list__link samePageScroll"
+                data-id="contact"
+                href="#contact"
+                >Contuct us</a
+              >
             </li>
           </ul>
           <a href="#" class="nav__button btn">Get in touch</a>
