--- a/business.html
+++ b/business.html
@@ -77,7 +77,9 @@
               <a class="nav-list__link" href="./migration.html">migration</a>
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="./business.html#contact"
+              <a class="nav-list__link samePageScroll"
+              data-id="contact"
+              href="./business.html#contact"
                 >Contuct us</a
               >
             </li>
