--- a/investment.html
+++ b/investment.html
@@ -80,7 +80,8 @@
             </li>
             <li class="nav-list__item">
               <a
-                class="nav-list__link"
+                class="nav-list__link samePageScroll"
+                data-id="contact"
                 href="#contact"
                 style="scroll-behavior: smooth"
                 >Contuct us</a
